  * Added better input file type checking to the various "correlate" and "spectra" scripts
  * Switched back to CDDIS for ionospheric data
  * Fixed an error when setting beam/dipole mode for STEPPED SDFs
  * Fixed a bug in updateLSLSSMIF.py when trying to revert a SSMIF
  * Added a color keyword to the classes in lsl.common.busy and lsl.common.progress

2.0.1
  * Fixed a few problems with the scripts that ship with LSL
  * Added support for time zone-aware datetime instances in lsl.common.datetime_to_mjdmpm() and mjdmpm_to_datetime()
  * Added a utc_datetime attribute to lsl.reader.base.FrameTimestamp to provide a time zone-aware datetime instance
  * Dropped the requirement that a beam be specified in lsl.common.sdf and sdfADP
  * Fixed a deadlock condition that could occur during a DRXFile.offset()
  * Fixed a bug in the DRXFile when dealing with small gaps in the data
  * Updated lsl.reader.errors.SyncError to allow for reporting of non-Mark5C problems
  * Update the documentation for lsl.common.idf, sdf, and sdfADP
  * Added missing sub, isub, div, and idiv operators to lsl.reader.base.FrameBase
  * Added a jd property to lsl.reader.base.FrameTimestamp to access the associated Julian day
  * Updated the lsl.writer module to accept times as FrameTimestamp instances
  * Updated the documentation in lsl.common.stations.Cable to make it more clear what attenuation and gain are

2.0.0
  * Major API changes to put LSL under a uniform coding style
  * Bumped the minimum Python version to 2.7
  * Bumped the mininum SciPy version to 0.13
  * Replaced PyFITS with astropy.io.fits
  * Removed support for 32-bit systems in the lsl.common modules
  * Added a new lsl.imaging.data module and classes to help store visibility data
  * Added a new extension to speed up w-projection gridding
  * Merged the non-windowed and windowed functions in the lsl.correlator extensions to de-duplicate some of the codebase